# env_to_config_toml

./: .gitignore  Cargo.toml  README.md  renovate.json
.github/workflows/: build.yaml
config-cli/: Cargo.toml
config-cli/src/: main.rs
config-cli/src/test_data/: 1.env  duplicate.env  new_verify.toml  old.toml  old_verify.toml  overwrite.toml  overwrite_verify.toml
src/test_data/: 2.env  duplicate_config.toml  new_verify.toml  old_verify.toml
