[package]
name = "config-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["cargo", "derive"] }
env-file-reader = "0.3.0"
glob = "0.3.1"
log = "0.4.18"
simple_logger = "4.1.0"
thiserror = "1.0.40"
toml = "0.7.4"
